fix: center bottom bar and raise arrow handle z-index above notch

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -23,7 +23,7 @@
 
 .arrow-notch {
   position: absolute;
-  z-index: 1;
+  z-index: 20;
 
   &.bottom {
     bottom: 0px;
